--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-webapp</artifactId>
-  <version>1.0-1[C[C[C[C[C[C[C[C</version>
+  <version>1.0-1-web-app</version>
   <packaging>war</packaging>
 
   <name>my-webapp Maven Webapp</name>
